--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
         <h2 class="glitch">Digital Creations</h2>
         <div class="project-container">
             <div class="project-card">
-                <img src="/src/images/project1.jpg" alt="Univalle Joomla Pages">
+                <img src="../portfolio/src/images/project1.jpg" alt="Univalle Joomla Pages">
                 <h3>Univalle Joomla Pages</h3>
                 <p>My work was implement all EIEE Univalle websites and research groups to Joomla.</p>
                 <a href="https://eiee.univalle.edu.co/" class="btn">Explore</a>
             </div>
             <div class="project-card">
-                <img src="/src/images/project2.jpg" alt="Mangas and Comics site">
+                <img src="../portfolio/src/images/project2.jpg" alt="Mangas and Comics site">
                 <h3>Minga</h3>
                 <p>About mangas and comics, register, login with google cloud, and some search filters implemented.</p>
                 <a href="https://minga-devfluencer.web.app/" class="btn">Enjoy</a>
             </div>
             <div class="project-card">
-                <img src="/src/images/project3.jpg" alt="Rotawisky Abogados">
+                <img src="../portfolio/src/images/project3.jpg" alt="Rotawisky Abogados">
                 <h3>Rotawisky Abogados</h3>
                 <p>WordPress site for a law firm, enhancing their online presence and client engagement.</p>
                 <a href="https://www.rotawiskyabogados.com/" class="btn">Discover</a>
