--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
 
     <!-- Import custom styles.css -->
-    <link rel="stylesheet" href="../portfolio/styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 
 </head>
 
