--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero">
-        <h1 class="glitch">DevFluecer</h1>
+        <h1 class="glitch">DevFluencer</h1>
         <p class="glitch">Full Stack Developer | #EthicalHacker</p>
     </section>
 
