--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero">
         <h1 class="glitch">DevFluencer</h1>
+        <h2 class="glitch">Andres Goyes</h2>
         <p class="glitch">Full Stack Developer | #EthicalHacker</p>
     </section>
 
