--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Import custom styles.css -->
     <link rel="stylesheet" href="../portfolio/styles/main.css">
+    <link rel="icon" type="image/x-icon" href="../portfolio/src/images/favico.ico">
 
 </head>
 
