--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <h3>Univalle Joomla Pages</h3>
                 <p>My work was implement all EIEE Univalle websites and research groups to Joomla.</p>
                 <a href="https://eiee.univalle.edu.co/" class="btn">Explore</a>
-            </div>
+            </div>            
             <div class="project-card">
                 <img src="../portfolio/src/images/project2.jpg" alt="Mangas and Comics site">
                 <h3>Minga</h3>
@@ -189,6 +189,12 @@
                 <h3>Rotawisky Abogados</h3>
                 <p>WordPress site for a law firm, enhancing their online presence and client engagement.</p>
                 <a href="https://www.rotawiskyabogados.com/" class="btn">Discover</a>
+            </div>
+            <div class="project-card">
+                <img src="../portfolio/src/images/project4.jpg" alt="Mytineraries">
+                <h3>Mytineraries</h3>
+                <p>React + vite site, for search cities an itineraries</p>
+                <a href="https://mytinerary-devfluencer.web.app/" class="btn">Visit</a>
             </div>
         </div>
     </section>
