--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="hero" class="hero">
         <h1 class="glitch">DevFluencer</h1>
         <h2 class="glitch">Andres Goyes</h2>
-        <p class="glitch">Full Stack Developer | #EthicalHacker</p>
+        <p class="glitch">Full Stack Developer</p>
     </section>
 
     <!-- About Section -->
